--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>HTMX Go Todo</title>
 		<link href="/static/index.css" rel="stylesheet" />
-		<script src="/static/htmx.js" type="text/javascript"></script>
+		<script src="/static/htmx.min.js" type="text/javascript"></script>
+		<script src="./node_modules/preline/dist/preline.js" defer></script>
 	</head>
 
 	<body></body>
