Added Hot Loading

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,11 @@
 		<script src="./node_modules/preline/dist/preline.js" defer></script>
 	</head>
 
-	<body></body>
+	<body>
+		<div class="bg-red-300">
+			<h1 class="text-5xl">HI</h1>
+			<p class="underline">TEST</p>
+		</div>
+	</body>
 </html>
 {{ end }}
