--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 		<title>HTMX Go Todo</title>
 		<link href="/static/index.css" rel="stylesheet" />
 		<script src="/static/htmx.min.js" type="text/javascript"></script>
-		<script src="./node_modules/preline/dist/preline.js" defer></script>
+		<script src="/preline/preline.js"></script>
 	</head>
 
 	<body>
@@ -15,6 +15,8 @@
 			<h1 class="text-5xl">HI</h1>
 			<p class="underline">TEST</p>
 		</div>
+
+		{{ template "StrongPass" }}
 	</body>
 </html>
 {{ end }}
