--- a/views/signup/strongPassword.go.html
+++ b/views/signup/strongPassword.go.html
@@ -3,22 +3,20 @@
     <div class="max-w-sm">
         <div class="flex">
             <div class="relative flex-1">
-                <input type="password" id="hs-strong-password-with-indicator-and-hint-in-popover"
+                <input type="password" id="hs-strong-password-with-indicator-and-hint-in-popover-{{.}}"
                        class="peer block w-full border-b-2 border-x-transparent border-b-gray-200 border-t-transparent bg-transparent px-0 py-4 text-sm placeholder:text-transparent autofill:pb-2 autofill:pt-6 focus:border-x-transparent focus:border-b-blue-500 focus:border-t-transparent focus:pb-2 focus:pt-6 focus:ring-0 disabled:pointer-events-none disabled:opacity-50 dark:border-b-gray-700 dark:text-gray-400 dark:focus:border-b-gray-600 dark:focus:ring-gray-600 [&:not(:placeholder-shown)]:pb-2 [&:not(:placeholder-shown)]:pt-6"
                        placeholder="Enter password">
 
                 <label
-                        for="hs-strong-password-with-indicator-and-hint-in-popover"
+                        for="hs-strong-password-with-indicator-and-hint-in-popover-{{.}}"
                         class="pointer-events-none absolute start-0 top-0 h-full truncate border border-transparent px-0 py-4 text-sm transition duration-100 ease-in-out peer-focus:-translate-y-1.5 peer-focus:text-xs peer-focus:text-gray-500 peer-disabled:pointer-events-none peer-disabled:opacity-50 peer-[:not(:placeholder-shown)]:-translate-y-1.5 peer-[:not(:placeholder-shown)]:text-xs peer-[:not(:placeholder-shown)]:text-gray-500 dark:text-white"
                 >Password</label>
                 <button type="button" data-hs-toggle-password='{
-        "target": "#hs-strong-password-with-indicator-and-hint-in-popover"
-      }'
-                        class="absolute top-0 end-0 px-3.5 py-5 rounded-e-md dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
-                    <svg class="flex-shrink-0 w-5 h-5 text-gray-400 dark:text-neutral-600" width="24"
-                         height="24"
-                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                         stroke-linecap="round"
+          "target": ["#hs-floating-underline-input-repassword-{{.}}", "#hs-strong-password-with-indicator-and-hint-in-popover-{{.}}"]
+        }'
+                        class="absolute top-0 end-0 p-3.5 rounded-e-md dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
+                    <svg class="flex-shrink-0 w-3.5 h-3.5 text-gray-400 dark:text-neutral-600" width="24" height="24"
+                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                          stroke-linejoin="round">
                         <path class="hs-password-active:hidden" d="M9.88 9.88a3 3 0 1 0 4.24 4.24"/>
                         <path class="hs-password-active:hidden"
@@ -26,8 +24,7 @@
                         <path class="hs-password-active:hidden"
                               d="M6.61 6.61A13.526 13.526 0 0 0 2 12s3 7 10 7a9.74 9.74 0 0 0 5.39-1.61"/>
                         <line class="hs-password-active:hidden" x1="2" x2="22" y1="2" y2="22"/>
-                        <path class="hidden hs-password-active:block"
-                              d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"/>
+                        <path class="hidden hs-password-active:block" d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"/>
                         <circle class="hidden hs-password-active:block" cx="12" cy="12" r="3"/>
                     </svg>
                 </button>
@@ -35,7 +32,7 @@
                 <div id="hs-strong-password-popover"
                      class="hidden absolute z-10 w-full bg-white shadow-md rounded-lg p-4 dark:bg-gray-800 dark:border dark:border-gray-700 dark:divide-gray-700">
                     <div id="hs-strong-password-in-popover" data-hs-strong-password='{
-            "target": "#hs-strong-password-with-indicator-and-hint-in-popover",
+            "target": "#hs-strong-password-with-indicator-and-hint-in-popover-{{.}}",
             "hints": "#hs-strong-password-popover",
             "stripClasses": "hs-strong-password:opacity-100 hs-strong-password-accepted:bg-teal-500 h-2 flex-auto rounded-full bg-blue-500 opacity-50 mx-1",
             "minLength": "8",
