Tabs moved to Links and centered UI

--- a/views/signup/input.go.html
+++ b/views/signup/input.go.html
@@ -1,6 +1,6 @@
 {{define "Input"}}
     {{$addonID:=uuid}}
-<div class="relative max-w-sm">
+<div class="relative max-w-sm w-full">
     <input
             type="text"
             id="hs-floating-underline-input-{{toLower .}}-{{$addonID}}"
