--- a/views/signup/strongPassword.go.html
+++ b/views/signup/strongPassword.go.html
@@ -1,6 +1,6 @@
 {{ define "Strong-Password" }}
     <!-- Strong Password -->
-    <div class="max-w-sm">
+    <div class="relative max-w-sm w-full">
         <div class="flex">
             <div class="relative flex-1">
                 <input type="password" id="hs-strong-password-with-indicator-and-hint-in-popover-{{.}}"
