--- a/views/signup/loginForm.go.html
+++ b/views/signup/loginForm.go.html
@@ -3,7 +3,8 @@
         {{block "Input" "Username"}}
         {{end}}
         {{$addonId := uuidv4}}
-        {{ template "Strong-Password" $addonId}}
+        {{ block "Strong-Password" $addonId}}
+        {{end}}
         <button type="button"
                 class="my-3 py-3 px-4 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
             Submit
