--- a/views/index.go.html
+++ b/views/index.go.html
@@ -4,9 +4,11 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
         <title>Budget Tracker</title>
-        <script src="https://go-echarts.github.io/go-echarts-assets/assets/echarts.min.js" type="text/javascript"></script>
-        <script src="/static/htmx.min.js" type="text/javascript"></script>
+        <script src="https://go-echarts.github.io/go-echarts-assets/assets/echarts.min.js"
+                type="text/javascript"></script>
+        <script src="https://unpkg.com/htmx.org@1.9.10/dist/htmx.min.js" type="text/javascript"></script>
         <link href="/static/index.css" rel="stylesheet"/>
         <script src="/static/theme.js" type="text/javascript" defer></script>
         <script src="/preline/preline.js"></script>
@@ -14,7 +16,6 @@
     </head>
 
     <body class="dark:bg-gray-900">
-
     <div class="py-3 flex items-center text-sm text-gray-800 before:flex-[1_1_0%] before:border-t before:border-gray-200 before:me-6 after:flex-[1_1_0%] after:border-t after:border-gray-200 after:ms-6 dark:text-white dark:before:border-gray-600 dark:after:border-gray-600">
         <a href="/"><h1 class="text-4xl dark:text-white">Budget tracker</h1></a>
         <button type="button"
