--- a/views/signup/registerForm.go.html
+++ b/views/signup/registerForm.go.html
@@ -1,5 +1,5 @@
 {{ define "User-Form" }}
-    <form class="grid place-items-center">
+    <form class="grid place-items-center" method="POST" action="/auth/register" hx-boost="true">
 
         {{block "Input" "Email"}}
         {{end}}
@@ -47,7 +47,9 @@
                 </button>
             </div>
         </div>
+        <div id="any-errors-register"></div>
         <button type="button"
+                hx-target-error="#any-errors-register"
                 class="my-3 py-3 px-4 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
             Submit
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-big-up" width="24"
